# aoc_2021

./: Cargo.toml  README.md
benches/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs
src/: common.rs  main.rs
src/day1/: mod.rs
src/day2/: mod.rs
src/day3/: mod.rs
src/day4/: mod.rs
src/day5/: mod.rs
src/day6/: mod.rs
src/day7/: mod.rs
